Update MMDet_InstanceSeg_Tutorial.ipynb to Fix channel order bug
The inference section of the tutorial jupyter notebook takes the input image as RGB. This has effect on the performance of the detector as the detector is trained with BGR format. This effect is not apparent in the provided ballon dataset but can have a huge impact depending on the dataset.

--- a/demo/MMDet_InstanceSeg_Tutorial.ipynb
+++ b/demo/MMDet_InstanceSeg_Tutorial.ipynb
@@ -2068,9 +2068,10 @@
     "import mmcv\n",
     "from mmdet.apis import init_detector, inference_detector\n",
     "img = mmcv.imread('./ballondatasets/balloon/train/7178882742_f090f3ce56_k.jpg',channel_order='rgb')\n",
+    "img_bgr = mmcv.imread('./ballondatasets/balloon/train/7178882742_f090f3ce56_k.jpg',channel_order='bgr')\n",
     "checkpoint_file = 'tutorial_exps/epoch_12.pth'\n",
     "model = init_detector(cfg, checkpoint_file, device='cpu')\n",
-    "new_result = inference_detector(model, img)\n",
+    "new_result = inference_detector(model, img_bgr)\n",
     "print(new_result)"
    ]
   },
